updating home to index to host.

--- a/cities.html
+++ b/cities.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <img src="resources/pngs/—Pngtree—apple red fruit commercial element_4037323.png" alt="apple logo" class="apple-logo">
             <ul>
-                <li><a href="home.html"><button class="navButton">Home</button></a></li>
+                <li><a href="index.html"><button class="navButton">Home</button></a></li>
                 <li><a href="statecapital.html"><button class="navButton">State Capital</button></a></li>
                 <li><a href="cities.html"><button class="navButton">Cities</button></a></li>
                 <li><a href="externalLinks.html"><button class="navButton">External Links</button></a></li>
