update on statecapital page

--- a/seattlePage.html
+++ b/seattlePage.html
@@ -24,12 +24,21 @@
        <main>
         <section>
             <div class="stateSymbols">
-              
+                <h2>Here are some entertaining links about the content of this page:</h2>
+                <ul>
+                    <li><a href="https://pacificsciencecenter.org/" class="href">Pacific Science Center</a></li>
+                    <li><a href="https://www.pikeplacemarket.org/" class="href">Pikes Place Market</a></li>
+                    <li><a href="https://www.spaceneedle.com/" class="href">Space Needle</a></li>
+                </ul>
             </div> 
         </section>
         <section>
             <div class="factsOfWashington">
-            
+            <p>Seattle is a unique city tucked away
+                 in the NorthWestern part of the United States. 
+                 In a state called, Washington. Dubbed as the Emerald City,
+                  Seattle houses many unique landmarks and events that make this 
+                  place so special.</p>
             </div>
         </section>
         <section class="sourcesContainer">
