Added the basic ideas for the remaining pages and links to the other cities you can't access from the nav buttons.

--- a/statecapital.html
+++ b/statecapital.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Washington State</title>
+<title>Olympia, Washington</title>
 <link rel="stylesheet" type="text/css" href="resources/cityPagesCss.css" />
 </head>
 <body>
-    <!-- DESKTOP NAV-->
     <nav>
         <div class="navbar">
             <img src="resources/pngs/—Pngtree—apple red fruit commercial element_4037323.png" alt="apple logo" class="apple-logo">
