Finished the general completion of my website.

--- a/cities.html
+++ b/cities.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Links to Cities in Washington State</title>
-<link rel="stylesheet" type="text/css" href="resources/syle.css" />
+<link rel="stylesheet" type="text/css" href="resources/cityLinks.css" />
 </head>
 <body>
 
@@ -19,11 +19,12 @@
         </div>
     </nav>
     <div class="linksToCities">
-
-        <p><a href="statecapital.html" class="href">State Capital Of Washington</a></p>
-        <p><a href="seattlePage.html" class="href">Seattle, Washington</a></p>
-        <p><a href="yakimaPage.html" class="href">Yakima, Washington</a></p>
-       </div>
+        <div class="containerToCityLinks">
+            <p><a href="statecapital.html" class="href">State Capital Of Washington  <inline><-- Click Here!</inline></a></p>
+            <p><a href="seattlePage.html" class="href">Seattle, Washington  <inline><-- Click Here!</inline></a></p>
+            <p><a href="yakimaPage.html" class="href">Yakima, Washington  <inline><-- Click Here!</inline></a></p>
+        </div>
+    </div>
    
 </body>
 </html>
