--- a/externalLinks.html
+++ b/externalLinks.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>External Links</title>
-<link rel="stylesheet" type="text/css" href="resources/syle.css" />
+<link rel="stylesheet" type="text/css" href="resources/cityLinks.css" />
 </head>
 <body>
 <    <nav>
@@ -21,6 +21,10 @@
         <div>
             <p>This page is under construction. Will be reserved for more info and extra links for 
                 guests to read about the State of Washington.
+            </p>
+            <p>For this assignment, I was going to place all the links here in one collection
+                that I had placed in the "aside" sections for each city, but I didn't want it to 
+                unecessarily increase my similarity score.
             </p>
         </div>
     </header>
