--- a/statecapital.html
+++ b/statecapital.html
@@ -53,6 +53,7 @@
                         and Bogchiel, that together form the world's largest temperate rainforest." Peglar, T.(2023)
                     </p>
                     <div class="introPhoto"><img src="resources/photos/olympicnationalpark.png" alt="Mt Rainier from Olympic National Park" class="src"></div>
+                    <p id="creditToOlympicPhoto">Photo Credit by Sean Pavone.</p>
                 </div>
             </section>
             <section class="photosInOlympia">
@@ -77,12 +78,11 @@
             <h2>Here, we will talk about the analytical facts about Olympia Washington.</h2>
 
             <ul>
-                <li>The population of Olympia is, <b>299,003 as of 2024.</b></li>
-                <li>The year Olympia was incorporated is: <b>January 28, 1859</b></li>
-                <li>The regin of the state where Olympia resides, is on the left side. Towards the coast.</li>
+                <li>The population of Olympia is, <b>55,151</b> Data USA, (N.A.).</li>
+                <li>The year Olympia was incorporated is: <b>January 28, 1859</b> History of Olympia, Washington, (N.A.).</li>
+                <li>The region of the state where Olympia resides, is on the left side. Towards the coast.</li>
                 <li>Olympia is an urban city.</li>
-                <li>The average income in Olympia for the folks who live there is, <b>$40,585</b></li>
-                <li>You can find out more info, on the <a href="https://en.wikipedia.org/wiki/Olympia,_Washington" class="href">Wikipedia page.</a></li>
+                <li>The average income in Olympia for the folks who live there is, <b>$73,851 Data USA, (N.A.).</b></li>
             </ul>
             
            </div>
@@ -92,11 +92,15 @@
         <div class="sourcesContent">
             <p>Tori Peglar, 4 Rainforests of Olympic National Park, (Mar 25, 2023)<a href="https://www.myolympicpark.com/things-to-do/natural-wonders/rainforests/" class="href">https://www.myolympicpark.com/things-to-do/natural-wonders/rainforests/</a></p>
             <p><a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html'>Apple logo in nav png image from pngtree.com/</a></p>
+            <p>History of Olympia, Washington, (N.A.), https://olympiahistory.org/history-of-olympia/#:~:text=When%20Washington%20Territory%20was%20formed,occurred%20on%20January%2028%2C%201859.</p>
+            <p>Data USA, (N.A.), https://datausa.io/profile/geo/olympia-wa </p>
+            </p>
            
             <p>Photo Sources</p>
             <p>Olmsted Archives, Washington State Capitol<a href="https://www.nps.gov/places/washington-state-capitol.htm" class="href">https://www.nps.gov/places/washington-state-capitol.htm</a></p>
             <p>Aimee Danielson, Exploring the Olympic Peninsula and Hoh Rain Forest, (May 23, 2020)<a href="https://aimeedanielson.com/olympic-pennisula-hoh-rain-forest/" class="href">https://aimeedanielson.com/olympic-pennisula-hoh-rain-forest/</a></p>
             <p>NPS Photo, Animals, (October 17, 2022)<a href="https://www.nps.gov/olym/learn/nature/animals.htm" class="href">https://www.nps.gov/olym/learn/nature/animals.htm</a></p>
+            <p>Sean Pavone, Ancient Forests of the Olympic Peninsula, (n.d) <a href="https://www.npca.org/trips/166-ancient-forests-of-the-olympic-peninsula" class="href">https://www.npca.org/trips/166-ancient-forests-of-the-olympic-peninsula</a></p>
         </div>
     </footer>
 </body>
