added form and javascript to verify emails matched. Finished up on details that were missing for the requirements on the assignment. Cleaned up all the unused images.

--- a/cities.html
+++ b/cities.html
@@ -25,6 +25,31 @@
             <p><a href="yakimaPage.html" class="href">Yakima, Washington  <inline><-- Click Here!</inline></a></p>
         </div>
     </div>
-   
+
+    <div class="formForSuggestions">
+        <p>Please, leave a suggestion!!</p>
+    </div>
+    <div class="form">
+        <form id="suggestionForm" action="#" method="POST">
+            <p>
+              <label for="first">Enter First Name:</label>
+              <input type="text" name="first" id="first" placeholder="Hank">
+            </p>
+            <p>
+              <label for="last">Enter Last Name:</label>
+              <input type="text" name="last" id="last" placeholder="Hill">
+            </p>
+            <p>
+              <label for="email">Email:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</label>
+              <input type="text" name="email" id="email" placeholder="Enter Your Email">
+            </p>
+            <p>
+              <label for="confirmEmail">Confirm Email:&#160;&#160;&#160;</label>
+              <input type="text" name="confirmEmail" id="confirmEmail" placeholder="Confirm Your Email">
+            </p>
+            <input type="submit" id="submit">
+          </form>
+    </div>
+    <script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
