Added some target blanks to have links go to a secondary page

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 <div class="listOfHelpfulSites">
                     <h2>Here are some entertaining links about the content of this page:</h2>
                     <ul>
-                        <li><a href="https://www.southsoundmag.com/arts-entertainment/giant-octopus-revealed/article_f40fe8c5-7b71-5b39-b9c8-27fa192d0dd1.html" class="href">More about the Giant Pacific Octopus.</a></li>
+                        <li><a href="https://www.southsoundmag.com/arts-entertainment/giant-octopus-revealed/article_f40fe8c5-7b71-5b39-b9c8-27fa192d0dd1.html" class="href" target="_blank">More about the Giant Pacific Octopus.</a></li>
                         <li><a href="https://en.wikipedia.org/wiki/Geoduck" class="href">What is a Geoduck?</a></li>
-                        <li><a href="https://www.worldatlas.com/cities/7-must-see-historic-towns-in-washington.html" class="href">Seven towns in Washington State worth visiting.</a></li>
-                        <li><a href="https://www.portseattle.org/blog/grown-and-made-washington" class="href">Learn more about the agriculture and what is grown here.</a></li>
-                        <li><a href="https://www.history.com/topics/us-states/washington" class="href">Some history and dates of key events in the state of Washington.</a></li>
-                        <li><a href="https://www.atlasobscura.com/things-to-do/washington" class="href">Here is a website with 303 listed and obscure things to do here.</a></li>
+                        <li><a href="https://www.worldatlas.com/cities/7-must-see-historic-towns-in-washington.html" class="href" target="_blank">Seven towns in Washington State worth visiting.</a></li>
+                        <li><a href="https://www.portseattle.org/blog/grown-and-made-washington" class="href" target="_blank">Learn more about the agriculture and what is grown here.</a></li>
+                        <li><a href="https://www.history.com/topics/us-states/washington" class="href" target="_blank">Some history and dates of key events in the state of Washington.</a></li>
+                        <li><a href="https://www.atlasobscura.com/things-to-do/washington" class="href" target="_blank">Here is a website with 303 listed and obscure things to do here.</a></li>
                     </ul>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     </li>
                 </ul>
                 <li>
-                    <a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html'>Apple logo in nav png image from pngtree.com/</a>
+                    <a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html' >Apple logo in nav png image from pngtree.com/</a>
                 </li>
                 <li>
                     Photo Links:
