--- a/seattlePage.html
+++ b/seattlePage.html
@@ -58,7 +58,7 @@
             <section class="photosInOlympia">
                 <div class="sidePhotos">
                     <div class="photo1">
-                        <img src="resources/photos/PacificScienceCenter.jpg" alt="Blue Sculpture at Pacific Science Center." width="400px">
+                        <img src="resources/photos/PacificScienceCenter.jpg" alt="Blue Sculpture at Pacific Science Center." width="400px" target="_blank">
                         <p>Photo Credit to Brooke-lynn Doonan.</p>
                     </div>
                     <div class="photo2">
