--- a/seattlePage.html
+++ b/seattlePage.html
@@ -8,12 +8,11 @@
 <body>
     <nav>
         <div class="navbar">
-            <img src="resources/pngs/—Pngtree—apple red fruit commercial element_4037323.png" alt="apple logo" class="apple-logo">
+            <img src="resources/pngs/Png apple.png" alt="apple logo" class="apple-logo">
             <ul>
                 <li><a href="index.html"><button class="navButton">Home</button></a></li>
                 <li><a href="statecapital.html"><button class="navButton">State Capital</button></a></li>
                 <li><a href="cities.html"><button class="navButton">Cities</button></a></li>
-                <li><a href="externalLinks.html"><button class="navButton">External Links</button></a></li>
             </ul>
         </div>
     </nav>
@@ -81,7 +80,7 @@
                 <li>The year Seattle was incorporated is: <b>December 2, 1869</b> Brief History of Seattle, (N.A.).</li>
                 <li>The region of the state where Seattle resides, is in the Puget Sound.</li>
                 <li>Seattle is a metropolitan  city.</li>
-                <li>The average income in Seattle for the folks who live there is, <b>63,167</b> United States Census Bureau, (N.A.).</li>
+                <li>The average "hourly wage of $38.47 in May 2022, 29 percent above the nationwide average of $29.76" US Bureau Of Labor and Statistics, (June 22, 2023).</li>
             </ul>
             
            </div>
@@ -91,7 +90,7 @@
         <div class="sourcesContent">
             <p><a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html'>Apple logo in nav png image from pngtree.com/</a></p>
             <p>Brief History of Seattle, (N.A.), https://www.seattle.gov/cityarchives/seattle-facts/brief-history-of-seattle</p>
-            <p>United States Census Bureau, (N.A.),https://www.census.gov/quickfacts/fact/table/seattlecitywashington/PST045222</p>
+            <p>US Bureau Of Labor and Statistics, (June 22, 2023), https://www.bls.gov/regions/west/news-release/occupationalemploymentandwages_seattle.htm#:~:text=Workers%20in%20the%20Seattle%2DTacoma,of%20Labor%20Statistics%20reported%20today.</p>
            
             <p>Photo Sources</p>
             <p>All photos were taken by me, Brooke-lynn Doonan.</p>
