--- a/statecapital.html
+++ b/statecapital.html
@@ -8,12 +8,11 @@
 <body>
     <nav>
         <div class="navbar">
-            <img src="resources/pngs/—Pngtree—apple red fruit commercial element_4037323.png" alt="apple logo" class="apple-logo">
+            <img src="resources/pngs/Png apple.png" alt="apple logo" class="apple-logo">
             <ul>
                 <li><a href="index.html"><button class="navButton">Home</button></a></li>
                 <li><a href="statecapital.html"><button class="navButton">State Capital</button></a></li>
                 <li><a href="cities.html"><button class="navButton">Cities</button></a></li>
-                <li><a href="externalLinks.html"><button class="navButton">External Links</button></a></li>
             </ul>
         </div>
     </nav>
@@ -82,7 +81,7 @@
                 <li>The year Olympia was incorporated is: <b>January 28, 1859</b> History of Olympia, Washington, (N.A.).</li>
                 <li>The region of the state where Olympia resides, is on the left side. Towards the coast.</li>
                 <li>Olympia is an urban city.</li>
-                <li>The average income in Olympia for the folks who live there is, <b>$73,851 Data USA, (N.A.).</b></li>
+                <li>"In 2020, the average annual wage was $58,433, compared to the state average of $73,504" Employment Security Department, (May, 2022).</b></li>
             </ul>
             
            </div>
@@ -93,7 +92,7 @@
             <p>Tori Peglar, 4 Rainforests of Olympic National Park, (Mar 25, 2023)<a href="https://www.myolympicpark.com/things-to-do/natural-wonders/rainforests/" class="href">https://www.myolympicpark.com/things-to-do/natural-wonders/rainforests/</a></p>
             <p><a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html'>Apple logo in nav png image from pngtree.com/</a></p>
             <p>History of Olympia, Washington, (N.A.), https://olympiahistory.org/history-of-olympia/#:~:text=When%20Washington%20Territory%20was%20formed,occurred%20on%20January%2028%2C%201859.</p>
-            <p>Data USA, (N.A.), https://datausa.io/profile/geo/olympia-wa </p>
+            <p>Employment Security Departnment, (May, 2022), https://esd.wa.gov/labormarketinfo/county-profiles/thurston </p>
             </p>
            
             <p>Photo Sources</p>
