--- a/yakimaPage.html
+++ b/yakimaPage.html
@@ -8,12 +8,11 @@
 <body>
     <nav>
         <div class="navbar">
-            <img src="resources/pngs/—Pngtree—apple red fruit commercial element_4037323.png" alt="apple logo" class="apple-logo">
+            <img src="resources/pngs/Png apple.png" alt="apple logo" class="apple-logo">
             <ul>
                 <li><a href="index.html"><button class="navButton">Home</button></a></li>
                 <li><a href="statecapital.html"><button class="navButton">State Capital</button></a></li>
                 <li><a href="cities.html"><button class="navButton">Cities</button></a></li>
-                <li><a href="externalLinks.html"><button class="navButton">External Links</button></a></li>
             </ul>
         </div>
     </nav>
@@ -80,7 +79,7 @@
                 <li>The year Yakima was incorporated is: <b>1883</b> City of Yakima, (N.A.)</li>
                 <li>The region of the state where Yakima resides, is on the East Side of Washington State.</li>
                 <li>Yakima is an urban city.</li>
-                <li>The average income in Yakima for the folks who live there is, <b>31,039 as of 2022 </b>Data Commons, (N.A.).</li>
+                <li>"Inflation-adjusted per capita income in Yakima County in 2020 was $49,099 compared to the state at $67,126 and the nation at $59,510." Employment Security Department, (April, 2022).</li>
             </ul>
             
            </div>
@@ -90,7 +89,7 @@
         <div class="sourcesContent">
             <p><a href='https://pngtree.com/freepng/apple-red-fruit-commercial-element_4037323.html'>Apple logo in nav png image from pngtree.com/</a></p>
             <p>City of Yakima,(N.A.), https://www.yakimawa.gov/visit/about/</p>
-            <p>Data Commons, (N.A.), https://datacommons.org/place/geoId/5380010?utm_medium=explore&mprop=income&popt=Person&cpv=age,Years15Onwards&hl=en</p>
+            <p>Employment Security Department, (April, 2022), https://esd.wa.gov/labormarketinfo/county-profiles/yakima</p>
         </div>
     </footer>
 </body>
